# cup_pickplace

ur5_pack_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur5_pack_moveit/config/: cartesian_limits.yaml  fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml  ur5.srdf
ur5_pack_moveit/launch/: bench_test_world.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  robotdisp.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  ur5_moveit_controller_manager.launch.xml  warehouse.launch
ur5_pack_moveit/scripts/: pick_place_tutorial.cpp  pickandplace (copy).cpp  pickandplace.cpp
ur5_pack_moveit/worlds/: bench_test.world
